Fixed not visible tag "q1 goals"

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,9 @@ p {
 .cyan {
   background-color: rgb(69, 171, 234);
 }
+.purple {
+  background-color: rgb(156, 114, 228);
+}
 .dgreen {
   background-color: rgb(100, 192, 169);
 }
